# yohsai-grainline

./: .gitignore  CMakeLists.txt  COSSERAT_DESIGN.md  DESIGN_PHILOSOPHY.md  DEVELOPMENT_NOTES.md  FABRIC_EXTENSION_DESIGN.md  GRAINLINE_DESIGN.md  KITSUKE_DESIGN.md  LICENSE  README.md  SESSION_MEMORY.md  SVG_TO_JSON_SPEC.md  THIRD_PARTY_NOTICES.md  __init__.py  blender_manifest.toml  build_native.ps1  build_native.sh  cosserat_native.py  kitsuke.py  mesh_loader.py  ui.py  yohsai_svg_parser.py  zozo_handoff.py
UTIL/: README.md  silhouette_export.py
native/: CMakeLists.txt
native/include/yohsai_cosserat/: c_api.h
native/src/: c_api.cpp  math.hpp  solver.cpp  solver.hpp
native/tests/: test_solver.cpp
tests/: blender_density_check.py  blender_incremental_auto_check.py  blender_mesh_check.py  blender_sleeve_check.py  blender_thread_determinism_check.py  blender_tube_check.py  blender_undo_check.py  source_package.py  test_cosserat_native.py  test_svg_parser.py
wheels/: pypdf-6.14.2-py3-none-any.whl
